# CLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cli.h  flake.nix
cli/: util.h
cli/parsers/: numeric.h  parse.h
examples/: e01.cc  e02.cc  e03.cc
options/: command_options.h  program_options.h
p2996/: expand.h  struct_to_tuple.h
parsers/: parse.h
